--- a/src/index.css
+++ b/src/index.css
@@ -89,8 +89,8 @@ body {
 }
 .btn__danger {
   color: #fff;
-  background-color: #ca3c3c;
-  border-color: #bd2130;
+  background-color: #623cca;
+  border-color: #0a0057;
 }
 .btn__filter {
   border-color: lightgrey;
